--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-
+h1{
+    font-size: 50px;
+    color: azure;
+    background: red;
+    text-align: center;
+}
+p{
+    font-size: 50px;
+    text-align: center;
+}
